# desktop/src/open-api/model/reportTemplate.ts
@@ -1,0 +1,28 @@
+/**
+ * Receipt Wrangler API.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { ReportRequestCommand } from './reportRequestCommand';
+
+
+export interface ReportTemplate { 
+    id: number;
+    createdAt: string;
+    createdBy?: number;
+    /**
+     * Created by entity\'s name
+     */
+    createdByString?: string;
+    updatedAt?: string;
+    /**
+     * The template name (mirrors the saved report\'s name).
+     */
+    name: string;
+    configuration: ReportRequestCommand;
+}
+
